for some modification

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <body>
     <h1>Hello World</h1>
     <p>This is a simple HTML document.</p>
+    <a href="#">Click here</a>
+    <h3>This is a heading</h3>
 
 </body>
 
